Fixing dropdown menu hover state CSS where background colour was too dark
[skip ci]

--- a/system/assets/css/admin/core/20_preside_ace_theme.less
+++ b/system/assets/css/admin/core/20_preside_ace_theme.less
@@ -11,9 +11,9 @@
 	}
 
 	.ace-nav {
-		> li, li.open {
+		> li, > li.open {
 			border-left : 1px solid #273b4c;
-			> a, a:hover, a:focus, a:active {
+			> a, > a:hover,  > a:focus, > a:active {
 				background-color : #486176 !important;
 				border-left : 1px solid #4e687d;
 			}
